# KooDynaAdvanced

./: .gitignore
Battery/: 00_PROJECT_PLAN.md  01_main.k  01_main_ale.k  01_main_gas_stacked_tier-1.k  01_main_gas_stacked_tier-1_ale.k  01_main_gas_stacked_tier0.k  01_main_gas_stacked_tier0_ale.k  01_main_gas_wound_tier-1.k  01_main_gas_wound_tier-1_ale.k  01_main_gas_wound_tier0.k  01_main_gas_wound_tier0_ale.k  01_main_phase1_stacked.k  01_main_phase1_stacked_tier0_5.k  01_main_phase1_stacked_tier1.k  01_main_phase1_wound.k  01_main_phase1_wound_tier0.k  01_main_phase1_wound_tier0_5.k  01_main_phase1_wound_tier1.k  01_main_phase2_stacked.k  01_main_phase2_stacked_tier0.k  01_main_phase2_stacked_tier0_5.k  01_main_phase2_stacked_tier1.k  01_main_phase2_wound.k  01_main_phase2_wound_tier0.k  01_main_phase2_wound_tier0_5.k  01_main_phase2_wound_tier1.k  01_main_phase3_stacked.k  01_main_phase3_stacked_ale.k  01_main_phase3_stacked_tier-1.k  01_main_phase3_stacked_tier0.k  01_main_phase3_stacked_tier0_5.k  01_main_phase3_stacked_tier1.k  01_main_phase3_wound_tier-1.k  01_main_phase3_wound_tier0.k  01_main_phase3_wound_tier0_5.k  01_main_phase3_wound_tier1.k  01_main_swelling_stacked_tier-1.k  01_main_swelling_stacked_tier0.k  01_main_swelling_wound_tier-1.k  01_main_swelling_wound_tier0.k  (+100 more)
Battery/Examples/: EXAMPLE_ANALYSIS_REPORT.md  battery.txt
Battery/Examples/basic/: em.k  i.k  mesh.k  soc.k  thermal.k
Battery/Examples/basic_exothermal/: em.k  i.k  mesh.k  thermal.k
Battery/Examples/basic_socshift/: em.k  i.k  thermal.k
Battery/tests/: test_battery_utils.py
(+62 files in other folders)
